--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                       class="label">Email</span>
                             </h3>
                             <a
-                               href="mailto:pkulyuwenhui@gmail.com">pkulyuwenhui@gmail.com</a>（李晓明）</br>
+                               href="mailto:lxm@pku.edu.cn">pkulyuwenhui@gmail.com</a>（李晓明）</br>
                             <a
                                href="mailto:pkulyuwenhui@gmail.com">pkulyuwenhui@gmail.com</a>（吕汶桧）
                         </li>
