email and back link

--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
                     <a
                     href='karenlyu.github.io'>
                     吕汶桧</a></h1>
-        <p>
-                </p>
                 <h1><a
                        href='#前言'>
                         前言</a>
@@ -150,7 +148,7 @@
                                       class="label">Email</span>
                             </h3>
                             <a
-                               href="mailto:lxm@pku.edu.cn">pkulyuwenhui@gmail.com</a>（李晓明）</br>
+                               href="mailto:lxm@pku.edu.cn">lxm@pku.edu.cn</a>（李晓明）</br>
                             <a
                                href="mailto:pkulyuwenhui@gmail.com">pkulyuwenhui@gmail.com</a>（吕汶桧）
                         </li>
@@ -196,12 +194,8 @@
                                 UP</a>
                         </li>
                         <li><a
-                               href="index.html">&lt;&lt;
-                                Back
-                                to
-                                the
-                                main
-                                page</a>
+                               href="karenlyu.github.io">&lt;&lt;
+                                Back to Karen Lyu's personal website</a>
                         </li>
                     </ul>
                 </div>
