back link validated

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 UP</a>
                         </li>
                         <li><a
-                               href="karenlyu.github.io">&lt;&lt;
+                               href="https://karenlyu21.github.io">&lt;&lt;
                                 Back to Karen Lyu's personal website</a>
                         </li>
                     </ul>
