--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
               content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet"
               href="assets/css/main.css" />
+        <style type="text/css">
+            body, input, select, textarea {font-family: "Noto Serif SC", "Source Sans Pro", Helvetica, sans-serif;}
+            strong, b {font-weight: 600;}
+            h1, h2, h3, h4, h5, h6 {font-weight: 600;}
+        </style>
     </head>
 
     <body
@@ -123,10 +128,13 @@
                     <li>
                         <a href="10.html"><span style="font-weight:600">10 表决：方式与挑战</span>（计算实践：孔多塞模型下的表决综合）</a>
                     </li>
-                    <li>
-                        <a href="afterword.html"><span style="font-weight:600">后记（吕汶桧）</span></a>
-                    </li>
                 </ul>
+                <h3
+                    id='后记'>
+                    后记
+                </h3>
+                <p><a href="afterword.html">中文版 &gt;&gt;&gt;&gt;...</a>
+                </br><a href="afterword_eng.html">English Version &gt;&gt;&gt;&gt;...</a></p>
             </section>
 
 
