--- a/afterword_eng.html
+++ b/afterword_eng.html
@@ -11,7 +11,7 @@
               content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet"
               href="assets/css/main.css" />
-        <style type="text/css">a b {color:#49bf9d;font-weight:500;}</style>
+        <style type="text/css">a b {color:#49bf9d;font-weight:500;} body, input, select, textarea {font-family: "Source Sans Pro", Helvetica, sans-serif;}</style>
     </head>
 
     <body
