--- a/afterword_eng.html
+++ b/afterword_eng.html
@@ -11,7 +11,8 @@
               content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet"
               href="assets/css/main.css" />
-        <style type="text/css">a b {color:#49bf9d;font-weight:500;} body, input, select, textarea {font-family: "Source Sans Pro", Helvetica, sans-serif;}</style>
+        <link rel="stylesheet"
+              href="assets/css/mine.css" />
     </head>
 
     <body
@@ -22,7 +23,7 @@
                 id="header">
             <div
                  class="inner">
-                <h1><a href="index.html"><strong>A Philosophy Student’s</br>CS Homework</strong></a>
+                <h1><a href="index.html"><strong>A Philosophy Student’s</br> CS Homework</strong></a>
                 </h1>
                 <p></p>
                 <h1
@@ -90,58 +91,83 @@
                     id='TOC'>
                     Table of Contents
                 </h3>
-                <ul>
-                    <li>
+                <ol>
+                    <li class="toc">
                         <a
-                           href="1.html"><b>1 Foundation of Social Network</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: calculate clustering coefficient and embeddedness; corroborate friendship paradox</div>
+                           href="1.html"><b>Foundation of Social Network</b></a>
+                           <div class="assign">
+                            Assignments: </br>
+                            <span class="download"><a href="./codes/hw1-1_clustering coefficient and embeddedness.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="1.html#121-%E8%81%9A%E9%9B%86%E7%B3%BB%E6%95%B0%E4%B8%8E%E5%B5%8C%E5%85%A5%E6%80%A7">calculate clustering coefficient and embeddedness</a></br>
+                            <span class="download"><a href="./codes/hw1-2_friendship paradox.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="1.html#122-%E5%8F%8B%E8%B0%8A%E6%82%96%E8%AE%BA%E7%9A%84%E9%AA%8C%E8%AF%81">corroborate friendship paradox</a>
+                            </div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="2.html"><b>2 Homophily and the Evolution of Social Network</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: simulate the network evolution under the effect of homophily</div>
+                           href="2.html"><b>Homophily and the Evolution of Social Network</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw2_the network evolution under the effect of homophily.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="2.html#22-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%90%8C%E8%B4%A8%E6%80%A7%E4%BD%9C%E7%94%A8%E4%B8%8B%E7%9A%84%E7%BD%91%E7%BB%9C%E6%BC%94%E5%8C%96%E8%BF%87%E7%A8%8B">simulate the network evolution under the effect of homophily</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="3.html"><b>3 Polarized Relations and the Stability and Balance of the Network Structure</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: determine whether a network is balanced</div>
+                           href="3.html"><b>Polarized Relations and the Stability and Balance of the Network Structure</b></a>
+                           <div class="assign"><span class="download">
+                               <a href="./codes/hw3_whether a network is balanced.zip"><i class="fas fa-download"></i> codes</a></span>
+                               <a class="item" href="3.html#32-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E7%BB%93%E6%9E%84%E5%B9%B3%E8%A1%A1%E6%80%A7%E7%9A%84%E5%88%A4%E6%96%AD">determine whether a network is balanced</a>
+                               </div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="4.html"><b>4 Foundation of the Game Theory</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: simulate the iterated prisoner's dilemma (IPD)</div>
+                           href="4.html"><b>Foundation of the Game Theory</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw4_iterated prisoner's dilemma (IPD).zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="4.html#42-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%A4%9A%E4%BA%BA%E9%87%8D%E5%A4%8D%E5%9B%9A%E5%BE%92%E5%9B%B0%E5%A2%83ipd%EF%BC%89%E5%8D%9A%E5%BC%88%E5%BE%AA%E7%8E%AF%E8%B5%9B">simulate the iterated prisoner's dilemma (IPD)</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="5.html"><b>5 Matched Market</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: simulate how a market comes to perfect matches</div>
+                           href="5.html"><b>Matched Market</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw5_simulate how a market comes to perfect matches.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="5.html#52-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%AE%9E%E7%8E%B0%E5%8C%B9%E9%85%8D%E5%B8%82%E5%9C%BA%E7%AE%97%E6%B3%95">simulate how a market comes to perfect matches</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="6.html"><b>6 Network Effect in the Market</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: compare different pricing strategies in a market with the network effect</div>
+                           href="6.html"><b>Network Effect in the Market</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw6_compare different pricing strategies in a market with the network effect.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="6.html#62-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E6%95%88%E5%BA%94%E4%B8%8B%E7%9A%84%E4%BB%B7%E6%A0%BC%E7%AD%96%E7%95%A5%E6%AF%94%E8%BE%83">compare different pricing strategies in a market with the network effect</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="7.html"><b>7 Cascade in a Network</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: simulate the network cascade</div>
+                           href="7.html"><b>Cascade in a Network</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw7_simulate the network cascade.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="7.html#72-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E7%BA%A7%E8%81%94%E8%BF%87%E7%A8%8B%E7%9A%84%E4%BB%BF%E7%9C%9F">simulate the network cascade</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="8.html"><b>8 Popularity and Power-Law Distribution</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: simulate the Matthew effect</div>
+                           href="8.html"><b>Popularity and Power-Law Distribution</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw8_simulate the Matthew effect.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="8.html#82-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%AF%8C%E8%80%85%E6%84%88%E5%AF%8C%E8%BF%87%E7%A8%8B%E7%9A%84%E6%A8%A1%E6%8B%9F">simulate the Matthew effect</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="9.html"><b>9 Influence and Consensus in Social Network</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: investigate the relationship between PageRank and DeGrook consensus</div>
+                           href="9.html"><b>Influence and Consensus in Social Network</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw9_investigate the relationship between PageRank and DeGrook consensus.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="9.html#92-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E4%B8%AD%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%B8%8E%E5%85%B1%E8%AF%86%E7%9A%84%E5%85%B3%E7%B3%BB">investigate the relationship between PageRank and DeGrook consensus</a></div>
                     </li>
-                    <li>
+                    <li class="toc">
                         <a
-                           href="10.html"><b>10 Voting: Manners and Challenges</b></a>
-                           <div  style="font-size:0.95em;margin-left:3em;">Assignment: calculate the voting results according to Condorcet model</div>
+                           href="10.html"><b>Voting: Manners and Challenges</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw10_calculate the voting results according to Condorcet model.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="10.html#102-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%AD%94%E5%A4%9A%E5%A1%9E%E6%A8%A1%E5%9E%8B%E4%B8%8B%E7%9A%84%E8%A1%A8%E5%86%B3%E7%BB%BC%E5%90%88">calculate the voting results according to Condorcet model</a></div>
                     </li>
-                </ul>
+                </ol>
             </section>
 
 
@@ -161,7 +187,14 @@
                                       class="label">Email</span>
                             </h3>
                             <a
-                               href="mailto:lxm@pku.edu.cn">lxm@pku.edu.cn</a> – Professor Xiaoming Li</br>
+                               href="mailto:lxm@pku.edu.cn">lxm@pku.edu.cn</a> – Professor Xiaoming Li
+                        </li>
+                        <li>
+                            <h3
+                                class="icon solid fa-envelope">
+                                <span
+                                      class="label">Email</span>
+                            </h3>
                             <a
                                href="mailto:pkulyuwenhui@gmail.com">pkulyuwenhui@gmail.com</a> – Wenhui Lyu
                         </li>
