--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
               content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet"
               href="assets/css/main.css" />
+              <link rel="stylesheet"
+              href="assets/css/mine.css" />
         <style type="text/css">
             body, input, select, textarea {font-family: "Noto Serif SC", "Source Sans Pro", Helvetica, sans-serif;}
             strong, b {font-weight: 600;}
             h1, h2, h3, h4, h5, h6 {font-weight: 600;}
+            .assign {
+                margin-left: 5em;
+            }
         </style>
     </head>
 
@@ -100,38 +105,94 @@
                     id='目录'>
                     目录
                 </h3>
-                <ul>
-                    <li>
-                        <a href="1.html"><span style="font-weight:600">1 社会网络基础</span>（计算实践：聚集系数与嵌入性、友谊悖论的验证）</a>
+                <ol>
+                    <li class="toc">
+                        <a
+                           href="1.html"><b>社会网络基础</b></a>
+                           <div class="assign">
+                            Assignments: </br>
+                            <span class="download"><a href="./codes/hw1-1_clustering coefficient and embeddedness.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="1.html#121-%E8%81%9A%E9%9B%86%E7%B3%BB%E6%95%B0%E4%B8%8E%E5%B5%8C%E5%85%A5%E6%80%A7">
+                                聚集系数与嵌入性</a></br>
+                            <span class="download"><a href="./codes/hw1-2_friendship paradox.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="1.html#122-%E5%8F%8B%E8%B0%8A%E6%82%96%E8%AE%BA%E7%9A%84%E9%AA%8C%E8%AF%81">
+                                友谊悖论的验证</a>
+                            </div>
                     </li>
-                    <li>
-                        <a href="2.html"><span style="font-weight:600">2 同质性与社会网络的演化</span>（计算实践：同质性作用下的网络演化过程）</a>
+                    <li class="toc">
+                        <a
+                           href="2.html"><b>同质性与社会网络的演化</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw2_the network evolution under the effect of homophily.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="2.html#22-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%90%8C%E8%B4%A8%E6%80%A7%E4%BD%9C%E7%94%A8%E4%B8%8B%E7%9A%84%E7%BD%91%E7%BB%9C%E6%BC%94%E5%8C%96%E8%BF%87%E7%A8%8B">
+                                同质性作用下的网络演化过程</a></div>
                     </li>
-                    <li>
-                        <a href="3.html"><span style="font-weight:600">3 极化关系下网络结构的稳定平衡性</span>（计算实践：网络结构平衡性的判断）</a>
+                    <li class="toc">
+                        <a
+                           href="3.html"><b>极化关系下网络结构的稳定平衡性</b></a>
+                           <div class="assign"><span class="download">
+                               <a href="./codes/hw3_whether a network is balanced.zip"><i class="fas fa-download"></i> codes</a></span>
+                               <a class="item" href="3.html#32-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E7%BB%93%E6%9E%84%E5%B9%B3%E8%A1%A1%E6%80%A7%E7%9A%84%E5%88%A4%E6%96%AD">
+                                    网络结构平衡性的判断</a>
+                               </div>
                     </li>
-                    <li>
-                        <a href="4.html"><span style="font-weight:600">4 博弈论基础概念</span>（计算实践：多人重复囚徒困境（IPD）博弈循环赛）</a>
+                    <li class="toc">
+                        <a
+                           href="4.html"><b>博弈论基础概念</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw4_iterated prisoner's dilemma (IPD).zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="4.html#42-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%A4%9A%E4%BA%BA%E9%87%8D%E5%A4%8D%E5%9B%9A%E5%BE%92%E5%9B%B0%E5%A2%83ipd%EF%BC%89%E5%8D%9A%E5%BC%88%E5%BE%AA%E7%8E%AF%E8%B5%9B">
+                                多人重复囚徒困境（IPD）博弈循环赛</a></div>
                     </li>
-                    <li>
-                        <a href="5.html"><span style="font-weight:600">5 匹配市场</span>（计算实践：实现匹配市场算法）</a>
+                    <li class="toc">
+                        <a
+                           href="5.html"><b>匹配市场</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw5_simulate how a market comes to perfect matches.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="5.html#52-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%AE%9E%E7%8E%B0%E5%8C%B9%E9%85%8D%E5%B8%82%E5%9C%BA%E7%AE%97%E6%B3%95">
+                                实现匹配市场算法</a></div>
                     </li>
-                    <li>
-                        <a href="6.html"><span style="font-weight:600">6 网络效应</span>（计算实践：网络效应下的价格策略比较）</a>
+                    <li class="toc">
+                        <a
+                           href="6.html"><b>网络效应</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw6_compare different pricing strategies in a market with the network effect.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="6.html#62-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E6%95%88%E5%BA%94%E4%B8%8B%E7%9A%84%E4%BB%B7%E6%A0%BC%E7%AD%96%E7%95%A5%E6%AF%94%E8%BE%83">
+                                网络效应下的价格策略比较</a></div>
                     </li>
-                    <li>
-                        <a href="7.html"><span style="font-weight:600">7 网络中的级联行为</span>（计算实践：网络级联过程的仿真）</a>
+                    <li class="toc">
+                        <a
+                           href="7.html"><b>网络中的级联行为</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw7_simulate the network cascade.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="7.html#72-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E7%BA%A7%E8%81%94%E8%BF%87%E7%A8%8B%E7%9A%84%E4%BB%BF%E7%9C%9F">
+                                网络级联过程的仿真</a></div>
                     </li>
-                    <li>
-                        <a href="8.html"><span style="font-weight:600">8 流行性</span>（计算实践：富者愈富过程的模拟）</a>
+                    <li class="toc">
+                        <a
+                           href="8.html"><b>流行性</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw8_simulate the Matthew effect.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="8.html#82-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%AF%8C%E8%80%85%E6%84%88%E5%AF%8C%E8%BF%87%E7%A8%8B%E7%9A%84%E6%A8%A1%E6%8B%9F">
+                                富者愈富过程的模拟</a></div>
                     </li>
-                    <li>
-                        <a href="9.html"><span style="font-weight:600">9 社会网络中的影响力与共识</span>（计算实践：网络中影响力与共识的关系）</a>
+                    <li class="toc">
+                        <a
+                           href="9.html"><b>社会网络中的影响力与共识</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw9_investigate the relationship between PageRank and DeGrook consensus.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="9.html#92-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E7%BD%91%E7%BB%9C%E4%B8%AD%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%B8%8E%E5%85%B1%E8%AF%86%E7%9A%84%E5%85%B3%E7%B3%BB">
+                                网络中影响力与共识的关系</a></div>
                     </li>
-                    <li>
-                        <a href="10.html"><span style="font-weight:600">10 表决：方式与挑战</span>（计算实践：孔多塞模型下的表决综合）</a>
+                    <li class="toc">
+                        <a
+                           href="10.html"><b>表决：方式与挑战</b></a>
+                           <div class="assign">
+                            <span class="download"><a href="./codes/hw10_calculate the voting results according to Condorcet model.zip"><i class="fas fa-download"></i> codes</a></span>
+                            <a class="item" href="10.html#102-%E8%AE%A1%E7%AE%97%E5%AE%9E%E8%B7%B5%E5%AD%94%E5%A4%9A%E5%A1%9E%E6%A8%A1%E5%9E%8B%E4%B8%8B%E7%9A%84%E8%A1%A8%E5%86%B3%E7%BB%BC%E5%90%88">
+                                孔多塞模型下的表决综合</a></div>
                     </li>
-                </ul>
+                </ol>
                 <h3
                     id='后记'>
                     后记
